@@ -1,3 +1,10 @@
+** v4.190 24.02.2019**
+* Changed the Armory Mode to work with the new Character Info from ElvUI.
+* Many Skin updates.
+* Added a MicroBar Tooltip.
+* Added a Community Chat Hider. Credits Nnogga.
+* Added NamePlate Scrolling Text.Credits Mpstark
+
 ** v4.09, 26.01.2019**
 * Dont load the AzeriteButtons if the ElvUI Character Skin is disabled.
 * Add a waring texture for missing gems.
